Services/opnsense/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: opnsense-service
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.1.1
    ports:
      - port: 443
