Services/opnsense/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: opnsense-service
  namespace: external-services
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 443
