Services/opnsense/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opnsense-ingress
  namespace: external-services
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - opnsense.dassidias.com
    secretName: opnsense-tls
  rules:
  - host: opnsense.dassidias.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opnsense-service
            port:
              number: 80
